--- a/package.json
+++ b/package.json
@@ -5,10 +5,22 @@
   "main": "dist/kudo.js",
   "module": "dist/kudo.mjs",
   "scripts": {
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha  --opts ./mocha.opts",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc mocha  --opts ./mocha.opts",
     "build:typescript": "tsc ./src/index.ts",
     "build:js": "rollup -c",
     "build": "rollup -c"
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts"
+    ],
+    "reporter": [
+      "html"
+    ],
+    "all": true
   },
   "repository": {
     "type": "git",
@@ -36,7 +48,9 @@
     "babel-preset-env": "1.6.1",
     "babelrc-rollup": "3.0.0",
     "chai": "4.1.2",
+    "laws": "0.2.1",
     "mocha": "4.1.0",
+    "nyc": "11.4.1",
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
