--- a/package.json
+++ b/package.json
@@ -5,22 +5,49 @@
   "main": "dist/kudo.js",
   "module": "dist/kudo.mjs",
   "scripts": {
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc mocha  --opts ./mocha.opts",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape src/**/*.test.ts | tap-spec",
     "build:typescript": "tsc ./src/index.ts",
     "build:js": "rollup -c",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "prettier-eslint --write",
+      "git add"
+    ]
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "lint-staged && npm run test"
+    }
   },
   "nyc": {
+    "check-coverage": true,
+    "branches": 100,
+    "functions": 100,
+    "lines": 100,
+    "statements": 100,
+    "sourceMap": false,
+    "instrument": false,
+    "all": true,
     "extension": [
       ".ts"
     ],
     "exclude": [
-      "**/*.d.ts"
+      "**/*.d.ts",
+      "**/*.test.ts"
     ],
     "reporter": [
-      "html"
+      "text-summary",
+      "lcov"
     ],
-    "all": true
+    "require": [
+      "ts-node/register"
+    ],
+    "include": [
+      "src"
+    ]
   },
   "repository": {
     "type": "git",
@@ -39,21 +66,27 @@
     "url": "https://github.com/blitzritz/kudojs/issues"
   },
   "homepage": "https://github.com/blitzritz/kudojs#readme",
-  "dependencies": {},
+  "dependencies": {
+    "fantasy-land": "3.5.0"
+  },
   "devDependencies": {
-    "@types/chai": "4.0.10",
-    "@types/mocha": "2.2.45",
+    "@types/tape": "4.2.31",
     "babel-core": "6.26.0",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
+    "babel-register": "6.26.0",
     "babelrc-rollup": "3.0.0",
-    "chai": "4.1.2",
+    "ghooks": "2.0.2",
     "laws": "0.2.1",
-    "mocha": "4.1.0",
+    "lint-staged": "6.1.0",
+    "npm-run-all": "4.1.2",
     "nyc": "11.4.1",
+    "prettier-eslint-cli": "4.7.0",
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
+    "tap-spec": "4.1.1",
+    "tape": "4.8.0",
     "ts-node": "4.1.0",
     "typescript": "2.6.2"
   }
