Documentation and some minor fixes and changes
Pending: ADT documentation

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "kudojs",
+  "name": "fp-kudojs",
   "version": "0.0.1",
-  "description": "A utility library to write code in functional programming style in Javascript and Typescript",
-  "main": "dist/kudo.js",
-  "module": "dist/kudo.mjs",
+  "description": "A utility library to write code in functional programming style in Javascript",
+  "main": "dist/kudo.umd.js",
+  "module": "dist/kudo.es.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
@@ -79,7 +79,6 @@
     "babelrc-rollup": "3.0.0",
     "cross-env": "5.1.3",
     "ghooks": "2.0.2",
-    "laws": "0.2.1",
     "lint-staged": "6.1.0",
     "npm-run-all": "4.1.2",
     "nyc": "11.4.1",
@@ -87,6 +86,7 @@
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
+    "rollup-plugin-uglify": "3.0.0",
     "tap-spec": "4.1.1",
     "tape": "4.8.0",
     "ts-node": "4.1.0",
