--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
+    "check-coverage": "nyc check-coverage",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "build:typescript": "cross-env tsc ./src/index.ts",
     "build:js": "cross-env rollup -c",
     "build": "cross-env rollup -c",
@@ -14,7 +16,8 @@
   },
   "lint-staged": {
     "*.ts": [
-      "prettier-eslint --write",
+      "prettier --parser typescript --write",
+      "tslint",
       "git add"
     ]
   },
@@ -27,8 +30,8 @@
     "check-coverage": true,
     "branches": 90,
     "functions": 90,
-    "lines": 90,
-    "statements": 90,
+    "lines": 95,
+    "statements": 95,
     "sourceMap": false,
     "instrument": true,
     "all": true,
@@ -82,7 +85,7 @@
     "lint-staged": "6.1.0",
     "npm-run-all": "4.1.2",
     "nyc": "11.4.1",
-    "prettier-eslint-cli": "4.7.0",
+    "prettier": "1.10.2",
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
@@ -90,6 +93,8 @@
     "tap-spec": "4.1.1",
     "tape": "4.8.0",
     "ts-node": "4.1.0",
+    "tslint": "5.9.1",
+    "tslint-config-prettier": "1.8.0",
     "typescript": "2.6.2"
   }
 }
