--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "npm-run-all": "4.1.2",
     "nyc": "11.4.1",
     "prettier": "1.10.2",
+    "rollup": "0.56.2",
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
