--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,15 @@ cache:
   directories:
     - node_modules
 node_js:
-  - 4
   - 6
+  - 8
 branches:
   only:
     - master
 notifications:
   email: false
+before_install:
+  - if [[ $TRAVIS_NODE_VERSION -lt 7 ]]; then npm install --global npm@4; fi
 before_script:
   - npm prune
 script:
