--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
     "babelrc-rollup": "3.0.0",
+    "codecov": "3.0.0",
     "cross-env": "5.1.3",
     "ghooks": "2.0.2",
     "lint-staged": "6.1.0",
