--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "module": "dist/kudo.es.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
+    "commit": "git-cz",
     "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
     "check-coverage": "nyc check-coverage",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "build:typescript": "cross-env tsc ./src/index.ts",
     "build:js": "cross-env rollup -c",
     "build": "cross-env rollup -c",
-    "precommit": "cross-env lint-staged && npm run test"
+    "precommit": "cross-env lint-staged && npm run test",
+    "release": "semantic-release pre && npm publish && semantic-release post"
   },
   "lint-staged": {
     "*.ts": [
@@ -22,8 +24,12 @@
     ]
   },
   "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    },
     "ghooks": {
-      "pre-commit": "npm run precommit"
+      "pre-commit": "npm run precommit",
+      "commit-msg": "commitlint -e $GIT_PARAMS"
     }
   },
   "nyc": {
@@ -75,16 +81,19 @@
   "homepage": "https://github.com/blitzritz/kudojs#readme",
   "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "6.1.0",
+    "@commitlint/config-conventional": "6.1.0",
     "@types/tape": "4.2.31",
     "babel-core": "6.26.0",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
     "babelrc-rollup": "3.0.0",
     "codecov": "3.0.0",
+    "commitizen": "2.9.6",
     "cross-env": "5.1.3",
+    "cz-conventional-changelog": "2.1.0",
     "ghooks": "2.0.2",
     "lint-staged": "6.1.0",
-    "npm-run-all": "4.1.2",
     "nyc": "11.4.1",
     "prettier": "1.10.2",
     "rollup": "0.56.2",
@@ -92,6 +101,7 @@
     "rollup-plugin-istanbul": "2.0.0",
     "rollup-plugin-typescript2": "0.9.0",
     "rollup-plugin-uglify": "3.0.0",
+    "semantic-release": "12.4.1",
     "tap-spec": "4.1.1",
     "tape": "4.8.0",
     "ts-node": "4.1.0",
