--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
     "check-coverage": "nyc check-coverage",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "build:typescript": "cross-env tsc ./src/index.ts",
+    "build:typescript": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' tsc ./src/index.ts",
     "build:js": "cross-env rollup -c",
     "build": "cross-env rollup -c",
     "precommit": "cross-env lint-staged && npm run test",
@@ -83,28 +83,28 @@
     "@commitlint/cli": "6.1.0",
     "@commitlint/config-conventional": "6.1.0",
     "@types/tape": "4.2.31",
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
     "babelrc-rollup": "3.0.0",
-    "codecov": "3.0.0",
-    "cross-env": "5.1.3",
+    "codecov": "3.0.2",
+    "cross-env": "5.1.5",
     "cz-conventional-changelog": "2.1.0",
     "ghooks": "2.0.2",
     "lint-staged": "6.1.0",
     "nyc": "11.4.1",
-    "prettier": "1.10.2",
-    "rollup": "0.56.2",
-    "rollup-plugin-babel": "3.0.3",
-    "rollup-plugin-istanbul": "2.0.0",
-    "rollup-plugin-typescript2": "0.9.0",
+    "prettier": "1.12.1",
+    "rollup": "0.58.2",
+    "rollup-plugin-babel": "3.0.4",
+    "rollup-plugin-istanbul": "2.0.1",
+    "rollup-plugin-typescript2": "0.14.0",
     "rollup-plugin-uglify": "3.0.0",
-    "semantic-release": "^12.4.1",
+    "semantic-release": "15.4.1",
     "tap-spec": "4.1.1",
-    "tape": "4.8.0",
+    "tape": "4.9.0",
     "ts-node": "4.1.0",
-    "tslint": "5.9.1",
-    "tslint-config-prettier": "1.8.0",
-    "typescript": "2.6.2"
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.12.0",
+    "typescript": "2.8.3"
   }
 }
