fix(build): fix build configs

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "fp-kudojs",
   "version": "0.2.0",
   "description": "A utility library to write code in functional programming style in Javascript",
-  "main": "dist/kudo.es.js",
+  "main": "dist/kudo.cjs.js",
+  "module": "dist/kudo.es.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
