--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
     "name": "fp-kudojs",
     "version": "0.3.5",
     "description": "A utility library to write code in functional programming style in Javascript",
-    "main": "dist/kudo.cjs.js",
-    "module": "dist/kudo.es.js",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
+        "test": "cross-env NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"noImplicitAny\": false}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
         "check-coverage": "nyc check-coverage",
         "report-coverage": "cat ./coverage/lcov.info | codecov",
-        "build:typescript": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' tsc ./src/index.ts",
+        "build:typescript": "cross-env tsc",
         "build:js": "cross-env rollup -c",
-        "build": "cross-env rollup -c",
+        "build": "cross-env rm -rf ./dist && rollup -c && npm run build:typescript",
         "precommit": "cross-env lint-staged && npm run test",
         "prepare": "npm run build",
         "semantic-release": "semantic-release",
@@ -37,8 +36,8 @@
         "check-coverage": true,
         "branches": 90,
         "functions": 90,
-        "lines": 95,
-        "statements": 95,
+        "lines": 90,
+        "statements": 90,
         "sourceMap": false,
         "instrument": true,
         "all": true,
@@ -84,6 +83,7 @@
     "devDependencies": {
         "@commitlint/cli": "^7.6.1",
         "@commitlint/config-conventional": "^7.6.0",
+        "@types/node": "^14.14.10",
         "@types/tape": "^4.13.0",
         "@typescript-eslint/eslint-plugin": "^4.8.2",
         "@typescript-eslint/eslint-plugin-tslint": "^4.8.2",
@@ -106,18 +106,19 @@
         "lint-staged": "^6.1.1",
         "nyc": "^11.9.0",
         "prettier": "^1.19.1",
-        "rollup": "^0.58.2",
+        "rollup": "^2.34.0",
         "rollup-plugin-babel": "^3.0.7",
         "rollup-plugin-istanbul": "^2.0.1",
-        "rollup-plugin-typescript2": "^0.14.0",
+        "rollup-plugin-typescript2": "^0.29.0",
         "rollup-plugin-uglify": "^3.0.0",
-        "semantic-release": "^15.14.0",
-        "tap-spec": "^4.1.2",
-        "tape": "^4.13.3",
+        "semantic-release": "^17.3",
+        "tap-spec": "^5.0",
+        "tape": "^5.0",
         "travis-deploy-once": "^5.0.0",
-        "ts-node": "^4.1.0",
+        "ts-node": "^9.0",
+        "tslib": "^2.0.3",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.3"
+        "typescript": "^4.0"
     }
 }
