--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fp-kudojs",
-    "version": "0.4.2",
+    "version": "0.0.0-development",
     "description": "A utility library to write code in functional programming style in Javascript",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
