--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     container: 'node:12-alpine'
     steps:
       - uses: actions/checkout@main
-      - run: apk update && apk upgrade && apk add --no-cache git
+      - run: apk update && apk upgrade && apk add --no-cache bash git openssh
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
