--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release npm package
+name: Release NPM Package
 
 on:
   push:
@@ -9,15 +9,14 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    container: 'node:12-alpine'
     steps:
       - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
+      - run: apk update && apk upgrade && apk add --no-cache bash git openssh
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      - run: npx semantic-release
+      - run: npm run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
