fix: remove sourcemap and compile to commonjs

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "cross-env npm run build:clean && NODE_ENV=test TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"noImplicitAny\": false}' nyc tape --reporter=lcov --require ts-node/register src/**/*.test.ts | tap-spec",
         "check-coverage": "nyc check-coverage",
         "report-coverage": "cat ./coverage/lcov.info | codecov",
-        "build:typescript": "cross-env tsc",
+        "build:typescript": "cross-env tsc -m \"commonjs\"",
         "build:js": "cross-env rollup -c",
         "build": "cross-env npm run build:clean && rollup -c && npm run build:typescript && cp -r ./dist/* . && rm -rf ./dist",
         "build:clean": "cross-env rm -rf ./dist && rm -rf ./interfaces && rm -rf ./functions && rm -rf ./data-types && rm -rf ./index.* && rm -rf ./kudo.*",
