--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
         "url": "https://github.com/breezyboa/kudojs/issues"
     },
     "homepage": "https://github.com/breezyboa/kudojs#readme",
-    "dependencies": {},
+    "dependencies": {
+        "tslib": "^2.0.3"
+    },
     "devDependencies": {
         "@commitlint/cli": "^7.6.1",
         "@commitlint/config-conventional": "^7.6.0",
@@ -118,7 +120,6 @@
         "tap-spec": "^5.0",
         "tape": "^5.0",
         "ts-node": "^9.0",
-        "tslib": "^2.0.3",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^4.0"
