--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,11 @@ name: Tests
 on: push
 
 jobs:
-  lint:
-    name: Run tests
-    runs-on: ubuntu-latest
-    container: 'node:12-alpine'
-    steps:
-    - uses: actions/checkout@v1
-    - run: npm ci
-    - run: npm test
+    lint:
+        name: Run tests
+        runs-on: ubuntu-latest
+        container: "node:18-alpine"
+        steps:
+            - uses: actions/checkout@v1
+            - run: npm ci
+            - run: npm test
