--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
         "@vitest/coverage-v8": "^1.3.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
+        "glob": "^10.3.10",
         "husky": "^9.0.11",
         "prettier": "^3.2.5",
         "rimraf": "^5.0.5",
         "typescript": "^5.3.3",
         "vite": "^5.1.4",
-        "vite-plugin-dts": "^3.7.3",
-        "vitest": "^1.3.1",
-        "glob": "^10.3.10"
+        "vite-plugin-dts": "^4.3.0",
+        "vitest": "^1.3.1"
     },
     "files": [
         "dist",
