--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
         "rootDir": "./src",
         "strict": true,
         "moduleResolution": "bundler",
-        "baseUrl": "./",
+        "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
         },
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "typeRoots": ["./node_modules/@types", "./src/types"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "**/*.test.ts"]
